<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context=".ui.profile.SelfsettingActivity">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_distance"
            style="@style/SWCardViewStyle_showInfo"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImagesetting"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:src="@drawable/unknown"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/vt_changeusr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/ChangeAvatar"
                    style="@style/SWTextViewSubtitle_First"
                   />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SWCardViewStyle_showInfo"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/barcolor"
                    >

                    <TextView
                        android:id="@+id/vt_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/SWTextViewSubtitle_First"
                        android:text="Change Name"
                        />
                    <TextView
                        android:id="@+id/username_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/Username"
                        style="@style/SWTextViewSubtitle_First"
                        />



                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/boundarycolor" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/barcolor"
                    >

                    <TextView
                        android:id="@+id/vt_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/ChangePassword"
                        style="@style/SWTextViewSubtitle_First"
                        />


                </LinearLayout>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/boundarycolor"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/barcolor"
                    >

                    <TextView
                        android:id="@+id/vt_Email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        style="@style/SWTextViewSubtitle_First"
                        android:text="@string/ChangeEmail"
                        />

                    <TextView
                        android:id="@+id/vt_myemail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        style="@style/SWTextViewSubtitle_First"
                        android:text="Helena.zu@stud.tu-darmstadt"
                        />


                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/SWCardViewStyle_showInfo"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/blue"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/barcolor"
                    >

                    <TextView
                        android:id="@+id/vt_signout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Sign out"
                        style="@style/SWTextViewSubtitle_First"
                        />
                </LinearLayout>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/boundarycolor" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/barcolor"
                    >

                    <TextView
                        android:id="@+id/vt_delete_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Delete account"
                        style="@style/SWTextViewSubtitle_First"
                        />

                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</layout>

